<resources>
    <string name="app_name">YoTechPractice</string>
    <string name="text">
        If either the MAIN action or LAUNCHER category are not declared for one of your activities, then your app icon will not appear in the Home screens list of apps.Let us try to run our modified Hello World! application we just modified. I assume you had created your AVD while doing environment setup. To run the app from Android studio, open one of your project s activity files and click RunEclipse Run Iconicon from the toolbar. Android studio installs the app on your AVD and starts it and if everything is fine with your setup and application, it will display Emulator window and you should see following log messages in LogCat window in Android studio
    </string>

    <string name="checkbox_heading">Which is your favourite game?</string>
    <string name="cricket_txt">Cricket</string>
    <string name="football_txt">Football</string>
    <string name="carram_txt">Carram</string>

    <string name="exit_butn">Exit</string>
    <string name="title_txt">Alert Dialog</string>
    <string name="message_txt">Do you want to exit?</string>

    <string name="font_txt1">Hello, Yo Tech!</string>
    <string name="font_txt2">Hello, Yo Tech, UK!</string>

    <string-array name="device_ip">
        <item>192.168.100.2</item>
        <item>192.168.100.3</item>
        <item>192.168.100.4</item>
        <item>192.168.100.5</item>
        <item>192.168.100.6</item>
        <item>192.168.100.7</item>
        <item>192.168.100.8</item>
    </string-array>


    <string-array name="device_name">
        <item>Sunmi 1</item>
        <item>T 80 2</item>
        <item>KP 3</item>
        <item>T2 4</item>
        <item>Sunmi 5</item>
        <item>T 100 6</item>
        <item>KDS 7</item>
    </string-array>

    <string-array name="device_description">
        <item>This is sunmi 1 \n This is good</item>
        <item>This is t 80 2 \nThis is good</item>
        <item>This is kp 3 \nThis is good</item>
        <item>This is t2 4 \nThis is good</item>
        <item>This is sunmi 5 \nThis is good</item>
        <item>This is t 100 6 \nThis is good</item>
        <item>This is kds 7 \nThis is good</item>

    </string-array>


    <string name="bd_text">
        Bangladesh, officially the Peoples Republic of Bangladesh, is a country in South Asia. It is the eighth-most populous country in the world and is among the most densely populated countries with a population of nearly 170 million in an area of 148,460 square kilometres (57,320 sq mi). Bangladesh shares land borders with India to the north, west, and east, and Myanmar to the southeast. To the south, it has a coastline along the Bay of Bengal. It is narrowly separated from Bhutan and Nepal by the Siliguri Corridor, and from China by the mountainous Indian state of Sikkim in the north. Dhaka, the capital and largest city, is the nations political, financial, and cultural centre. Chittagong is the second-largest city and is the busiest port on the Bay of Bengal. The official language of Bangladesh is Bengali while Bangladeshi English is also used in the government and official documents alongside Bengali.\n
        Bangladesh forms the sovereign part of the historic and ethnolinguistic region of Bengal, which was divided during the Partition of India in 1947 as part of a Muslim union with Pakistan, which it separated from in a bloody independence war in 1971. The country has a Bengali Muslim majority. Ancient Bengal was known as Gangaridai and was a bastion of pre-Islamic kingdoms. Muslim conquests after 1204 heralded the sultanate and Mughal periods, during which an independent Bengal Sultanate and a wealthy Mughal Bengal transformed the region into an important centre of regional affairs, trade, and diplomacy. After the Battle of Plassey in 1757, the maximum extent of British Bengal stretched from the Khyber Pass in the west to Singapore in the east. The creation of Eastern Bengal and Assam in 1905 set a precedent for the emergence of Bangladesh. The All India Muslim League was founded in Dhaka in 1906. In 1940, the first Prime Minister of Bengal, A. K. Fazlul Huq, supported the Lahore Resolution. Before the partition of Bengal, a Bengali sovereign state was first proposed by premier H. S. Suhrawardy. A referendum and the announcement of the Radcliffe Line established the present-day territorial boundary.
    </string>
    <string name="uk_text">
        The United Kingdom of Great Britain and Northern Ireland, commonly known as the United Kingdom (UK) or Britain, is a country in Northwestern Europe, off the coast of the continental mainland. It comprises England, Scotland, Wales, and Northern Ireland. The UK includes the island of Great Britain, the north-eastern part of the island of Ireland, and most of the smaller islands within the British Isles. Northern Ireland shares a land border with the Republic of Ireland; otherwise, the United Kingdom is surrounded by the Atlantic Ocean, the North Sea, the English Channel, the Celtic Sea, and the Irish Sea. The total area of the United Kingdom is 94,354 square miles (244,376 km2), with an estimated population of nearly 67.6 million people in 2022.\n
        In 1707, the Kingdom of England (which included Wales) and the Kingdom of Scotland united under the Treaty of Union to create the Kingdom of Great Britain. The Acts of Union 1800 incorporated the Kingdom of Ireland to create the United Kingdom of Great Britain and Ireland in 1801. Most of Ireland seceded from the UK in 1922 as the Irish Free State, and the Royal and Parliamentary Titles Act 1927 created the present name, the United Kingdom of Great Britain and Northern Ireland.
    </string>
    <string name="usa_text">
        The United States of America (USA or U.S.A.), commonly known as the United States (US or U.S.) or America, is a country primarily located in North America. It is a federation of 50 states, which also includes a federal capital district (Washington, D.C.), and 326 Indian reservations. Outside the union of states, it asserts sovereignty over five major unincorporated island territories and various uninhabited islands. The country has the worlds third-largest land area, second-largest exclusive economic zone, and third-largest population, exceeding 334 million.\n\n\n
        Paleo-Indians migrated across the Bering land bridge more than 12,000 years ago, and went on to form various civilizations and societies. British colonization led to the first settlement of the Thirteen Colonies in Virginia in 1607. Clashes with the British Crown over taxation and political representation sparked the American Revolution, with the Second Continental Congress formally declaring independence on July 4, 1776. Following its victory in the Revolutionary War (1775–1783), the country continued to expand across North America. As more states were admitted, sectional division over slavery led to the secession of the Confederate States of America, which fought the remaining states of the Union during the 1861–1865 American Civil War. With the Unions victory and preservation, slavery was abolished nationally. By 1890, the United States had established itself as a great power. After Japans attack on Pearl Harbor in December 1941, the U.S. entered World War II. The aftermath of the war left the U.S. and the Soviet Union as the worlds two superpowers and led to the Cold War, during which both countries engaged in a struggle for ideological dominance and international influence. Following the Soviet Unions collapse and the end of the Cold War in 1991, the U.S. emerged as the world sole superpower.
    </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->


    //CardView
    <string name="option1">Noah</string>
    <string name="option2">BD Biman</string>
    <string name="option3">Train</string>
    <string name="option4">Walk</string>

</resources>